阅读: 第四章利用右脑

--- a/2021.1/程序员的思维修炼.md
+++ b/2021.1/程序员的思维修炼.md
@@ -363,3 +363,87 @@ L型提供下面9种能力:
 
 ## 第4章: 利用右脑
 
+## 4.1 培养图像意识
+
+人应该努力学习洞察和培养自己内心深处的灵光一现，这远远胜于外面流光溢彩的整个世界。然而，人总会下意识地抛弃自己特有的想法，仅仅因为那是他自己的想法。 ---拉尔夫·瓦尔多·爱默生
+
+
+要投入更多的脑物质去解决问题和发挥创造力，最简便的方法就是激活更多的神经通路。
+
+扩大: 感观范围，使用与平常不同的感官。
+
+**诀窍12: 增加感观体验以促进大脑的使用。**
+
+> 利用多感观反馈(Use cross-sensory feedback)。
+
+> 刺激你的大脑(Feed your brain)。
+
+* 大脑总是渴望接受这种额外的、新奇的刺激
+* 大脑擅于持续适应变化的环境，因此，要定期改变环境
+
+
+> 绘画即是观察(Drawing is really about seeing)。
+
+> 建立R型到L型的转换(Engage an R-mode to L-mode flow)。
+
+
+**诀窍13: R型开路，L型紧跟。**
+
+> 先适用它(Get used to it)。
+
+**诀窍14: 使用隐喻作为L型和R型相融之所。**
+
+大多数人不是特别善于处理抽象概念。使用隐喻把抽象的概念与一些具体的、日常可见的事务联系起来，就更容易让人理解它。
+
+> 提出衍生式隐喻是很困难的(Generative metaphors are hard)。
+
+**诀窍15: 培养幽默感以建立更强大的隐喻。**
+
+
+你的大脑存储着它收到的一切输入。但是，虽然存储着，它不一定会索引这些记忆，但是这一切都不会丢失。
+
+> 许多想法是无法用语言表达的(Many ideas are not verbalizable)。
+
+## 4.2 书写
+利用R型潜意识能力的简单方式: 书写。
+
+### 晨写技术
+作家惯用的技术。
+
+* 早晨做的第一件事儿: 晨写
+* 至少写3页，手写，不需要键盘、电脑
+* 不要审查删减你写的内容。不论写得好不好，写下来
+* 坚持天天写
+
+### 自由写技术
+
+写博客
+
+### 利用三步
+* 迷宫: 智力题
+* 迷径: 沉思工具，提供了唯一的路径，无需做出选择。
+
+
+
+## 4.5 换换脑子
+拥有创造力 和 问题解决能力 的关键在于寻找思考问题的不同方式。
+
+**诀窍17: 改变解决问题的角度。**
+
+需要是发明之母，角色扮演是发明之父。 --求伽罗·费·因格
+
+
+## 培养新习惯
+* 坚持晨写至少2周
+* 培养快速的洞察能力，寻找不相关事务之间的关系或类比
+* 面对难题时引入更多感观。哪些对你而言最有效果？
+* 阅读一些有别于平常的东西。如科幻小说
+* 尝试点不同类型的电影、假期、音乐或咖啡
+* 点一些你喜欢的餐厅从未吃过的菜
+* 逆向思维
+
+
+## 第5章: 调试你的大脑
+
+
+
