第5章部分阅读笔记

--- a/2021.1/程序员的思维修炼.md
+++ b/2021.1/程序员的思维修炼.md
@@ -445,5 +445,87 @@ L型提供下面9种能力:
 
 ## 第5章: 调试你的大脑
 
+我从来都不想成为怪人，但别人都认为我想。 --弗兰克·扎帕
+
+> 我们不是理智的生物(We are not rational creatures)。
+
+人们普遍认为领导者都是勤勉的、有思想的决策者。他们搜集所有相关的事实，权衡取舍，然后做出富有逻辑性的、理性的决定。
+
+但实际上，我们是基于不完整的记忆和当时的情感状态来做出决策并解决问题，忽略了关键的事实，却根据发生的时间地点或是否醒目而关注不想干的细节。
+
+本章探讨4大问题:
+* 认知偏见: 思维如何被误导
+* 时代影响: 同代人如何影响你
+* 个性倾向: 个性如何影响思维
+* 硬件故障: 大脑较老区域如何压制较聪明区域
+
+
+### 5.1 了解认知偏见
+
+维基百科列举了大约90种常见的认知偏见。
+
+下面写出值得重视的偏见:
+#### 思维定势
+只是看到1个数字就会影响你随后对数字的预测和决定。
+
+#### 基本归因错误
+
+我们倾向于把别人的行为归因于他们的个性，而不去考虑发生时的情景。
+
+我们会轻易地为自己开脱。
+
+`记住`: 行为经常是对情景的响应，而不是基本的个性使然。
+
+#### 自私的偏见
+这种偏见使人们相信，项目的成功是我的功劳，失败则与我无关。
+
+这种行为可能是1种个人防御机制导致的，但是也请记住你也是系统的一部分--无论结果好坏。
+
+#### 需要定论
+
+我们对疑问和不确定性感到不舒服，我们会竭尽全力解决未有定论的问题，移除不确定性，进而得出定论。
+
+
+但是不确定性也是1件好事: 让你的选择是开放的。
+
+#### 认可上的偏见
+
+每一个人都根据自己的成见和喜好原则来选择相应的事实。
+
+#### 曝光效应
+
+我们往往因为非常熟悉某些事物而对它有所偏爱。
+
+这包括不再好用甚至会出错的工具、技术或方法。
+
+#### 霍桑效应
+
+人们在知道自己正被审视时，往往会改变自己的行为。
+
+#### 虚假记忆
+大脑很容易把想象的事件和真实的记忆混淆。
+
+
+#### 符号约简谬论
+L型非常乐于提供1个快速的符号来表示1个复杂的对象或系统，这至少丢失了细节，有时甚至是事物的真相。
+
+#### 名词谬论
+
+以为给事物贴上标签就意味着能够解释或理解它。
+
+
+> 意想不到的事件改变历史(Unexpected events change the game)。
+
+黑天鹅现象警示我们不要把 未观察到的 或 罕见的事件 认为不可能。
+
+**记住标题: 很少不意味着没有。**
+
+
+真正随机的事件形成了一系列错综相连的值和独立的值，而同质和随机是2回事儿。
+
+> 绝不说绝不(Never say never)。
+
+
+
 
 
